--- a/templates/main_site/contact.html
+++ b/templates/main_site/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оставить заявку - Honji Review</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style.css">
 </head>
 <body class="bg-[#1E1E1E] text-white">
 <div class="min-h-screen flex flex-col">
